--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -20,7 +20,7 @@
     outline        : none;
     list-style     : none;
     user-select    : none;
-    text-decoration: none !important;
+    text-decoration: none;
     text-transform : capitalize;
     box-sizing     : border-box;
     font-family    : 'Exo 2', sans-serif;
@@ -71,14 +71,14 @@ section {
 
 .heading {
     @include fontStyle(4rem, #444);
-    margin               : 2rem 0;
-    padding-top          : 0rem;
-    text-align           : center;
-    letter-spacing       : 1.7rem;
-    text-decoration      : underline;
-    text-decoration-style: solid;
-    text-decoration-color: var(--themeColor);
-    text-underline-offset: -1.5rem;
+    margin                       : 2rem 0;
+    padding-top                  : 0rem;
+    text-align                   : center;
+    letter-spacing               : 1.7rem;
+    text-decoration              : underline;
+    text-decoration-style        : solid;
+    text-decoration-color        : var(--themeColor);
+    text-underline-offset        : -1.5rem;
 }
 
 
