--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -86,4 +86,7 @@ section {
 @import 'header';
 @import 'home';
 @import 'about';
+@import 'service';
+@import 'projects';
+@import 'contact';
 @import 'responsiveness';
