--- a/assets/css/_responsiveness.scss
+++ b/assets/css/_responsiveness.scss
@@ -53,13 +53,14 @@
                     margin: 1rem 0;
 
                     a {
-                        display      : block;
-                        padding      : 1rem 0;
-                        width        : 25rem;
-                        text-align   : center;
-                        border-radius: 5rem;
-                        border       : var(--border);
-                        text-align   : center;
+                        display        : block;
+                        padding        : 1rem 0;
+                        width          : 25rem;
+                        text-align     : center;
+                        text-decoration: none;
+                        border-radius  : 5rem;
+                        border         : var(--border);
+                        text-align     : center;
 
                         &:hover {
                             background-color: #333;
@@ -105,6 +106,6 @@
 
 @media (max-width: 320px) {
     .home .hero .text1 {
-        width  : 100%;
+        width: 100%;
     }
 }
