--- a/assets/css/_contact.scss
+++ b/assets/css/_contact.scss
@@ -31,4 +31,55 @@
             }
         }
     }
+
+    .form-container {
+
+        width        : 90%;
+        margin       : 0 auto;
+        padding      : 1rem 3rem;
+        margin-bottom: 2rem;
+        box-shadow   : var(--boxShadow);
+        border-radius: .5rem;
+
+
+        form input,
+        textarea {
+            height    : 4.5rem;
+            padding   : 0 1rem;
+            margin    : 2rem 0;
+            box-shadow: var(--boxShadow);
+            @include fontStyle(1.5rem, var(--font1));
+        }
+
+        .inputBox {
+            display        : flex;
+            justify-content: space-between;
+
+            input {
+                width: 49%;
+            }
+        }
+
+        input[type="email"] {
+            width: 100%;
+        }
+
+        textarea {
+            width     : 100%;
+            height    : 20rem;
+            padding   : 1rem;
+            resize    : none;
+            overflow-y: auto;
+        }
+
+        input[type="submit"] {
+            background-color: var(--themeColor);
+            width           : 15rem;
+            @include fontStyle(2rem, var(--white));
+
+            &:hover {
+                opacity: .8;
+            }
+        }
+    }
 }
